# Druse

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  VERSION  project.yml
App/: DruseApp.swift  UpdateChecker.swift
Benchmark/: BenchmarkRunner.swift  BenchmarkTypes.swift  README.md  analyze.py  analyze_decomposition.py  calibrate_drusina.py  calibrate_drusina_pdbbind.py  compare_vina_reference.py  prepare.py  requirements.txt  run_benchmark.py  run_real_life_panel.py
Benchmark/panels/: real_life_panel_v1.json  real_life_panel_v2.json
Chemistry/: BondPerception.swift  ChargeCalculator.swift  DunbrackRotamerLibrary.swift  EEMChargeCalculator.swift  FASPREnergyCalculator.swift  FASPRMetalAccelerator.swift  FASPRSearch.swift  FASPRSidechainPacker.swift  FASPRVDWParameters.swift  GFN2Refiner.swift  GemmiBridge.swift  HBondClassifier.swift  HBondNetworkOptimizer.swift  LBFGSOptimizer.swift  LigandpKaPredictor.swift  LoopBuilder.swift  LoopMetalAccelerator.swift  MMCIFParser.swift  MOL2Parser.swift  PDBParser.swift  PDBWriter.swift  PocketDetection.swift  PreparationMinimizer.swift  ProteinPreparation.swift  ProteinResidueCompleteness.swift  ProteinResidueReconstruction.swift  ProteinResidueReferenceCIFData.swift  ProteinResidueReferenceTemplateStore.swift  ProteinResidueTemplates.swift  Protonation.swift  QEqChargeCalculator.swift  RDKitBridge.swift  SDFParser.swift  SDFWriter.swift  ScaffoldAnalogGenerator.swift  SidechainTopology.swift  XTBMetalAccelerator.swift
CppCore/: CMakeLists.txt  druse_2d.cpp  druse_core.cpp  druse_core.h  druse_core_analysis.cpp  druse_core_geometry.cpp  druse_core_internal.h  druse_core_io.cpp  druse_core_ionization.cpp  druse_core_pka_featurize.cpp  druse_core_protonation_tools.cpp  druse_core_variants.cpp  druse_gemmi.cpp  druse_openmm.cpp  druse_openmm.h  druse_xtb.cpp  druse_xtb.h  rebuild.sh
CppCore/.cache/clangd/index/: druse_2d.cpp.AF13409A8C1EB259.idx  druse_core.cpp.12E917161AFA770F.idx  druse_core.h.46AFC230A612ADC1.idx  druse_gemmi.cpp.3CCFFB075598F824.idx
Docking/: BindingSite.swift  DiffusionDockingEngine.swift  DockingEngine+Analysis.swift  DockingEngine+Execution.swift  DockingEngine.swift  DockingTypes.swift  FlexDockingEngine.swift  FlexGridProxy.swift  FlexibleDocking.swift  FragmentDockingEngine.swift  PoseClustering.swift  PoseValidator.swift  VirtualScreening.swift
ML/: DruseAFWeightLoader.swift  Inference.swift  PIGNet2WeightLoader.swift  PKaGNNPredictor.swift  PKaGNNWeightLoader.swift
Metal/: ChargeCompute.metal  DiffusionDocking.metal  DockingCommon.h  DockingCompute.metal  DockingGA.metal  DockingGridMaps.metal  DockingLocalSearch.metal  DockingMonteCarlo.metal  DockingPocketDetect.metal  DockingScoring.metal  Druse-Bridging-Header.h  DruseAFCompute.metal  DruseAFv4Compute.metal  FASPREnergyCompute.metal  FeatureCompute.metal  FlexDocking.metal  FlexGridProxy.metal  FragmentDocking.metal  HBondScoring.metal  InteractionCompute.metal  LoopRefineCompute.metal  PIGNet2Compute.metal  PKaGNNCompute.metal  PostProcessing.metal  PreparationMinimizeCompute.metal  RenderShaders.metal  ShaderTypes.h  SurfaceCompute.metal  XTBCompute.metal
Models/: DruseProject.swift  LigandDatabase.swift  LigandTableColumns.swift  MolecularModels.swift  Molecule.swift  PharmacophoreConstraint.swift  PharmacophoreTemplate.swift  TestMolecules.swift
Models/druse-models/: DruseAF.weights  DruseAFv4.weights  Druse_scoring_types.md  PIGNet2.weights  PkaGNN.weights
Models/druse-models/PocketDetector.mlpackage/: INTEGRATION_ML_POCKET.md  Manifest.json
Renderer/: Camera.swift  MeshGenerators.swift  MetalView.swift  PostProcessing.swift  Renderer.swift  SurfaceGenerator.swift
Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
Resources/Assets.xcassets/WelcomeBackground.imageset/: Contents.json
Services/: PDBService.swift
Tests/: CoreTests.swift  DockingIntegrationTests.swift  DockingTestHelpers.swift  DruseTests.swift  DrusinaInteractionTests.swift  IntegrationTests.swift  PipelineTests.swift  TautomerProtomerTests.swift
Training/: download_data.py  export_coreml.py  export_coreml_pKi.py  export_druseaf_weights.py  export_pignet2_weights.py  precompute_druse_features_v2.py  precompute_pocket_features.py  requirements.txt  trainDruseAFv4.py  trainDruseAFv5.py  trainPocketML.py  train_admet.py  train_druse_pKi.py  train_druse_pKi_v2.py  train_druse_score.py  train_pka.py  train_pocket_detector.py
UITests/: DruseUITests.swift
Utils/: AccessibilityID.swift  ActivityLog.swift  FileImportHandler.swift  MathUtils.swift
ViewModels/: AppViewModel+Demo.swift  AppViewModel+Docking.swift  AppViewModel+LeadOpt.swift  AppViewModel+Loading.swift  AppViewModel+MultiPose.swift  AppViewModel+Preparation.swift  AppViewModel+Screening.swift  AppViewModel+Selection.swift  AppViewModel.swift  BatchDockingViewModel.swift  DockingCoordinator.swift  LeadOptimizationState.swift  MoleculeManager.swift  WorkspaceState.swift
Views/: BugReportWindow.swift  ChemDrawerView.swift  ConstraintConfigSheet.swift  ContentView.swift  DemoOverlay.swift  DockingTabView.swift  DruseHelpView.swift  EnumerationSheet.swift  ImportMappingSheet.swift  InspectorPanel.swift  InteractionDiagramLayout.swift  InteractionDiagramRenderer.swift  InteractionDiagramView.swift  InteractionDiagramWindow.swift  InteractionLegendView.swift  LeadOptComparisonView.swift  LeadOptimizationTabView.swift  LigandBatchPanel.swift  LigandDatabaseView.swift  LigandDatabaseWindow.swift  LigandDetailPanel.swift  LigandImportSheet.swift  LigandMini3DView.swift  LogConsoleView.swift  MultiPoseAnalysisSheet.swift  PanelComponents.swift  PharmacophoreEditorView.swift  PreDockSheet.swift  PreparationTabView.swift  ResultsDatabaseWindow.swift  ResultsTabView.swift  ScaffoldAnalogSheet.swift  ScaffoldInputSheet.swift  SearchTabView.swift  SequenceView.swift  SettingsView.swift  SidebarView.swift  StatusStripView.swift  WelcomeRibbonBackground.swift  WelcomeScreen.swift
scripts/: bundle_dmg.sh
third_parties_deps/gemmi/: CMakeLists.txt
(+1 files in other folders)
